--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "build": "cd node_modules/puppeteer & npm run postinstall"
+    "build": "cd node_modules/puppeteer && npm run postinstall"
   },
   "keywords": [],
   "author": "",
